Apply ModuleSource to interpreter
attempt to fix windows

fix inputstreamsource

UriUtils covers more cases for constucting path